added google analytics

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,16 @@
     <title>Farmed Near Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/style.css">
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-G8SER0Q045');
+    </script>
+    <!-- End Google Analytics -->
+
 
     <style>
         body {
